# python-frontend

./: .gitignore  pyproject.toml
flexbox-examples/: components.py  main.py
grid-examples/: components.py
layouts/: main.py
pure-examples/box-model/: components.py
pure-examples/box-model/static/: style.css
pure-examples/formularios/: components.py
pure-examples/projeto_zero/: components.py
pure-examples/projeto_zero/static/: style.css
pure-examples/site_basico/: components.py  main.py
pure-examples/tags_html/: components.py
spotify-clone/: components.py  config.py  main.py
spotify-clone/components/: health.py
tailwind-examples/customizacao-tailwind/: components.py  tailwind_config.py
tailwind-examples/customizacao-tailwind/static/: style.css
tailwind-examples/espacamento/: components.py  main.py
tailwind-examples/flexbox-examples/: components.py
tailwind-examples/grid-examples/: components.py
tailwind-examples/layouts/: components.py
tailwind-examples/projeto_zero/: main.py
tailwind-examples/projeto_zero/components/: root.py
tailwind-examples/spotify-clone/components/: index.py
