[project]
name = "frontend-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Ramon Medeiro",email = "r.medeiro10@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "reactpy[fastapi] (>=1.1.0,<2.0.0)",
    "reactpy-router (>=2.0.0,<3.0.0)",
    "reactpy-utils (>=0.0.33,<0.0.34)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
